--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,12 +1,13 @@
 <idea-plugin>
-    <id>com.zoutairan.ClassFileJump</id>
-    <name>Plugin display name here</name>
-    <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+    <id>com.zoutairan.CompiledFileJumper</id>
+    <name>Compiled File Jumper</name>
+    <vendor email="one@zoutairan.com" url="http://www.zoutairan.com">1nfinity</vendor>
 
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    Jump between .class file and source file
     ]]></description>
+
+    <version>0.001</version>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
@@ -14,15 +15,17 @@
     <depends>com.intellij.modules.lang</depends>
     -->
 
+    <depends>com.intellij.modules.lang</depends>
+
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="SourceFileIconProvider"/>
         <codeInsight.lineMarkerProvider language="JAVA" implementationClass="ClassFileIconProvider"/>
     </extensions>
 
     <actions>
-        <action class="Action" id="Action" text="ClassFileJump Setting"
-                description="input the output path">
-            <add-to-group group-id="ToolsMenu" anchor="last"/>
-        </action>
+        <!--<action class="Action" id="Action" text="ClassFileJump Setting"-->
+                <!--description="input the output path">-->
+            <!--<add-to-group group-id="ToolsMenu" anchor="last"/>-->
+        <!--</action>-->
     </actions>
 </idea-plugin>
